<resources>
    <string name="app_name">OrderingApp</string>
    <string name="store">Pizza Hut</string>
    <string name="c1">Pizza $8</string>
    <string name="c2">Wings $6</string>
    <string name="c3">Drinks $2</string>
    <string name="pepperoni">Pepperoni + $2</string>
    <string name="chicken">Chicken + $3</string>
    <string name="beef">Beef + $3</string>
    <string name="exCheese">Extra Cheese + $2</string>
    <string name="norCheese">Normal Cheese + $0</string>
    <string name="sixteen">16 inch + $4</string>
    <string name="twelve">12 inch + $0</string>
    <string name="bbq">BBQ Wings</string>
    <string name="buffalo">Buffalo Wings</string>
    <string name="obey">Obey Wings</string>
    <string name="sixps">6 Pieces + $0</string>
    <string name="twelveps">12 Pieces + $6</string>
    <string name="coke">Coke</string>
    <string name="sprite">Sprite</string>
    <string name="orange">Orange</string>
    <string name="small">Small + $0</string>
    <string name="large">Large + $1</string>
    <string name="submit">Submit</string>
    <string name="currentPrice">0</string>
    <string name="send">Send</string>
</resources>