<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:id="@+id/pizzaHut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/store"
        android:textSize="50sp"/>
    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currentPrice"
        android:textSize="50sp"/>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android">
        <Button
            android:id="@+id/pizzaButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c1"/>
        <Button
            android:id="@+id/wingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c2"/>
        <Button
            android:id="@+id/drinksButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c3"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/submitButton"
            android:text="@string/submit"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/typeOfPizza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="invisible">

                <RadioButton
                    android:id="@+id/typePepperoni"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pepperoni" />

                <RadioButton
                    android:id="@+id/typeChicken"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chicken" />

                <RadioButton
                    android:id="@+id/typeBeef"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beef" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/cheese"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="invisible">

                <RadioButton
                    android:id="@+id/normalCheese"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/norCheese" />
                <RadioButton
                    android:id="@+id/extraChesse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exCheese" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="invisible">

                <RadioButton
                    android:id="@+id/inch12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/twelve" />

                <RadioButton
                    android:id="@+id/inch16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sixteen" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/typeOfWings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="invisible">

                <RadioButton
                    android:id="@+id/bbqWings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bbq" />

                <RadioButton
                    android:id="@+id/buffaloWings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buffalo" />

                <RadioButton
                    android:id="@+id/obeyWings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/obey" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/wingSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="invisible">

                <RadioButton
                    android:id="@+id/sixPieceWings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sixps" />

                <RadioButton
                    android:id="@+id/twelvePieceWings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/twelveps" />

            </RadioGroup>

                <RadioGroup
                    android:id="@+id/soda"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible">

                    <RadioButton
                        android:id="@+id/coke"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/coke" />

                    <RadioButton
                        android:id="@+id/sprite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sprite" />

                    <RadioButton
                        android:id="@+id/orange"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/orange" />
                </RadioGroup>

                <RadioGroup
                    android:id="@+id/drinkSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible">

                    <RadioButton
                        android:id="@+id/small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/small" />

                    <RadioButton
                        android:id="@+id/large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/large" />
                </RadioGroup>



</LinearLayout>
</LinearLayout>
</LinearLayout>
